# clap-cli-template

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml  cargo.toml
.github/workflows/: publish.yml
src/: main.rs
