[package]
name = "{{project-name}}"
version = "0.1.0"
description = "{{description}}"
authors = ["{{authors}}"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/{{github_user}}/{{project-name}}"
repository = "https://github.com/{{github_user}}/{{project-name}}"
keywords = ["cli", "{{project-name}}", "tools", "shell"]
categories = ["command-line-utilities", "command-line-interface", "utilities"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "3", features = ["derive", "env"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
